log
Thu 24 Aug 2023 08:17:08 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:6: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘return’
   34 |      return list;
      |      ^~~~~~
list.c:34:13: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   34 |      return list;
      |             ^~~~
      |             List
list.c:34:13: note: each undeclared identifier is reported only once for each function it appears in
list.c:35:1: error: control reaches end of non-void function [-Werror=return-type]
   35 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
635e0c8
Thu 24 Aug 2023 08:25:03 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:12: error: incompatible types when returning type ‘List’ {aka ‘struct List’} but ‘List *’ {aka ‘struct List *’} was expected
   36 |     return list;
      |            ^~~~
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
   37 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f9b6def
Thu 24 Aug 2023 08:37:17 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
5081990
Thu 24 Aug 2023 08:57:39 PM UTC: 
 list.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:5: error: expected statement before ‘)’ token
   42 |     )
      |     ^
list.c: In function ‘pushFront’:
list.c:59:10: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   59 |   if(list->next == NULL) return;
      |          ^~
list.c: In function ‘popCurrent’:
list.c:87:10: error: ‘node’ undeclared (first use in this function); did you mean ‘Node’?
   87 |     free(node);
      |          ^~~~
      |          Node
list.c:87:10: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
1ff6e61
Fri 25 Aug 2023 01:41:08 AM UTC: 
 list.c | 17 ++++++++---------
 1 file changed, 8 insertions(+), 9 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:5: error: expected statement before ‘)’ token
   42 |     )
      |     ^
Compilation failed
555362e
Fri 25 Aug 2023 01:41:23 AM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|5
total_score: 15/70
a2f2e38
Fri 25 Aug 2023 01:47:12 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
bce3657
Fri 25 Aug 2023 01:48:55 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
d5bcbd5
Fri 25 Aug 2023 01:53:52 AM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:49:12: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   49 |     if(list->next != NULL) {
      |            ^~
list.c:50:27: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   50 |       list->current = list->next;
      |                           ^~
list.c:51:19: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   51 |       return (list->data);
      |                   ^~
Compilation failed
56f044f
Fri 25 Aug 2023 01:55:16 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:50:27: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   50 |       list->current = list->next;
      |                           ^~
list.c:51:19: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   51 |       return (list->data);
      |                   ^~
Compilation failed
61f96db
Fri 25 Aug 2023 01:55:50 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
793392f
Fri 25 Aug 2023 01:57:22 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4656a7d
Fri 25 Aug 2023 02:00:34 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
c22eb65
Fri 25 Aug 2023 02:05:12 AM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
aba3fb3
Fri 25 Aug 2023 02:08:22 AM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
4cbc057
Fri 25 Aug 2023 02:08:45 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
323938c
Fri 25 Aug 2023 02:35:24 AM UTC: 
 list.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  9|3
total_score: 35/70
07875e7
Fri 25 Aug 2023 02:52:34 AM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
b449f9a
Fri 25 Aug 2023 02:56:38 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d6104c4
Fri 25 Aug 2023 03:18:26 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
69c23ab
Fri 25 Aug 2023 07:53:42 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
3a3b8fc
Fri 25 Aug 2023 09:44:19 PM UTC: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
e48f329
Fri 25 Aug 2023 09:44:48 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
1b2c06d
Fri 25 Aug 2023 10:46:09 PM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  11|1
total_score: 55/70
e6a7efa
Fri 25 Aug 2023 10:59:36 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
92e3071
Fri 25 Aug 2023 11:00:30 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:112:24: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
  112 |     while(aux->next != current) {
      |                        ^~~~~~~
      |                        popCurrent
list.c:112:24: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
49c1140
Fri 25 Aug 2023 11:01:14 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f6e2584
Fri 25 Aug 2023 11:05:34 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:122:16: error: expected ‘;’ before ‘:’ token
  122 |     return NULL:
      |                ^
Compilation failed
c88a646
Fri 25 Aug 2023 11:05:42 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7dba50f
Fri 25 Aug 2023 11:20:08 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  11|1
total_score: 55/70
b0d199f
Fri 25 Aug 2023 11:23:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
98c54d5
Fri 25 Aug 2023 11:24:27 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|1
total_score: 55/70
71c2599
Fri 25 Aug 2023 11:34:39 PM UTC: 
 list.c | 12 +++---------
 1 file changed, 3 insertions(+), 9 deletions(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:116:19: error: ‘L’ undeclared (first use in this function)
  116 |       aux->next = L->current->next;
      |                   ^
list.c:116:19: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
1f4b0a4
Fri 25 Aug 2023 11:34:54 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
3d349e1
Sat 26 Aug 2023 12:12:50 AM UTC: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
4567474
Sat 26 Aug 2023 12:15:21 AM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|1
total_score: 55/70
b39628f
Sat 26 Aug 2023 12:53:03 AM UTC: 
 list.c | 22 +++++++++-------------
 1 file changed, 9 insertions(+), 13 deletions(-)
 tests:  0|0
8615b99
Sat 26 Aug 2023 12:53:34 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ff1e77c
Sat 26 Aug 2023 12:54:22 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
13858a9
Sat 26 Aug 2023 01:02:33 AM UTC: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  0|0
4e93e6a
Sat 26 Aug 2023 01:20:08 AM UTC: 
 list.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  0|0
c2bf5da
Sat 26 Aug 2023 02:58:59 AM UTC: 
 list.c | 25 +++++++++++++++++--------
 1 file changed, 17 insertions(+), 8 deletions(-)
 tests:  0|0
21ec958
Sat 26 Aug 2023 02:59:41 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
fabe0ee
Sat 26 Aug 2023 03:03:57 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
bc5c6c6
Sat 26 Aug 2023 03:14:33 AM UTC: 
 list.c | 18 ++++++++++++------
 1 file changed, 12 insertions(+), 6 deletions(-)
 tests:  11|1
total_score: 55/70
4a273d5
